Update mpirun command to include --oversubscribe

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Run basic test
         run: |
-          mpirun -np 4 ./pbft_mpi
+          mpirun --oversubscribe -np 4 ./pbft_mpi
